--- a/8. BOSTON - cross validation/boston_house_prices.ipynb
+++ b/8. BOSTON - cross validation/boston_house_prices.ipynb
@@ -42,14 +42,25 @@
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "# Модели \n",
-    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.linear_model import HuberRegressor\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "from sklearn.neighbors import KNeighborsRegressor\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "\n",
+    "# Работа с метаданными\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.model_selection import RandomizedSearchCV\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "\n",
     "\n",
     "#Визуализации\n",
     "import seaborn as sns\n",
     "%matplotlib inline\n",
     "from jupyterthemes import jtplot\n",
     "jtplot.style()\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import plotly\n"
    ]
   },
   {
@@ -70,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,11 +91,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.3, random_state = 0)"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.2, random_state = 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    24.0\n",
+       "1    21.6\n",
+       "2    34.7\n",
+       "3    33.4\n",
+       "4    36.2\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = pd.DataFrame(y_test.reset_index(drop=True), columns=['target'])"
    ]
   },
   {
@@ -107,7 +152,373 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.1 Линейная регрессия"
+    "### 2.0 Линейная регрессия (Обычная)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Посмотрим какой результат дает обычная линейная регрессия\n",
+    "model_reg = LinearRegression()\n",
+    "\n",
+    "fit_intercepts = [False, True]\n",
+    "param_regr = dict(fit_intercept=fit_intercepts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GridSearchCV(cv=5, error_score='raise',\n",
+       "       estimator=LinearRegression(copy_X=True, fit_intercept=True, n_jobs=1, normalize=False),\n",
+       "       fit_params=None, iid=True, n_jobs=1,\n",
+       "       param_grid={'fit_intercept': [False, True]},\n",
+       "       pre_dispatch='2*n_jobs', refit=True, return_train_score='warn',\n",
+       "       scoring=None, verbose=0)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grid_reg = GridSearchCV(model_reg, param_regr, cv=5)\n",
+    "grid_reg.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.7485360676638366\n",
+      "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=1, normalize=False)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(grid_reg.best_score_)\n",
+    "print(grid_reg.best_estimator_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result['LinearRegression'] = pd.Series(grid_reg.best_estimator_.predict(X_test))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.1 Линейная регрессия (Huber Loss)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_huberloss = HuberRegressor()\n",
+    "\n",
+    "epsilons = np.linspace(1, 4, 11)\n",
+    "alphas = np.linspace(0.0001, 0.01, 100)\n",
+    "\n",
+    "#Параметры в одном словаре\n",
+    "param_huberloss = dict(alpha=alphas, epsilon=epsilons)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GridSearchCV(cv=5, error_score='raise',\n",
+       "       estimator=HuberRegressor(alpha=0.0001, epsilon=1.35, fit_intercept=True, max_iter=100,\n",
+       "        tol=1e-05, warm_start=False),\n",
+       "       fit_params=None, iid=True, n_jobs=1,\n",
+       "       param_grid={'alpha': array([0.0001, 0.0002, ..., 0.0099, 0.01  ]), 'epsilon': array([1. , 1.3, 1.6, 1.9, 2.2, 2.5, 2.8, 3.1, 3.4, 3.7, 4. ])},\n",
+       "       pre_dispatch='2*n_jobs', refit=True, return_train_score='warn',\n",
+       "       scoring=None, verbose=0)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grid_huberloss = GridSearchCV(model_huberloss, param_huberloss, cv=5)\n",
+    "grid_huberloss.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.7160406917567481\n",
+      "HuberRegressor(alpha=0.0037, epsilon=1.6, fit_intercept=True, max_iter=100,\n",
+      "        tol=1e-05, warm_start=False)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(grid_huberloss.best_score_)\n",
+    "print(grid_huberloss.best_estimator_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result['HuberRegressor'] = pd.Series(grid_huberloss.best_estimator_.predict(X_test))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.2 \"К\" ближайших соседей (для задачи регрессии)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_knn = KNeighborsRegressor()\n",
+    "\n",
+    "n_neighbor = range(1, 30)\n",
+    "leaf_size = range(5, 30)\n",
+    "weight = ['uniform', 'distance']\n",
+    "\n",
+    "#parameters\n",
+    "param_knn = dict(n_neighbors=n_neighbor, weights=weight, \n",
+    "                     leaf_size=leaf_size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grid_knn = GridSearchCV(model_knn, param_knn, cv=5)\n",
+    "grid_knn.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "print(grid_knn.best_score_)\n",
+    "print(grid_knn.best_estimator_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result['KNeighborsRegressor'] = pd.Series(grid_knn.best_estimator_.predict(X_test))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.3 DecisionTreeRegressor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_tree = DecisionTreeRegressor()\n",
+    "\n",
+    "criterions = ['mse', 'friedman_mse', 'mae'] \n",
+    "min_samples_leafs = range(1,10)\n",
+    "min_weight_fraction_leafs = [0, 0.01, 0.1, 0.15, 0.25, 0.5] \n",
+    "\n",
+    "param_tree = dict(criterion=criterions,\n",
+    "                  min_samples_leaf=min_samples_leafs,\n",
+    "                  min_weight_fraction_leaf=min_weight_fraction_leafs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grid_tree = GridSearchCV(model_tree, param_tree, cv=5)\n",
+    "grid_tree.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "print(grid_tree.best_score_)\n",
+    "print(grid_tree.best_estimator_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result['DecisionTreeRegressor'] = pd.Series(grid_tree.best_estimator_.predict(X_test))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.4 RandomForest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_forest = RandomForestRegressor()\n",
+    "\n",
+    "n_estimators_ = range(1, 15)\n",
+    "criterions = ['mse', 'friedman_mse', 'mae'] \n",
+    "min_samples_leafs = range(1,10)\n",
+    "\n",
+    "param_forest = dict(n_estimators=n_estimators_,\n",
+    "                    criterion=criterions,\n",
+    "                    min_samples_leaf=min_samples_leafs,)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grid_forest = GridSearchCV(model_forest, param_forest, cv=5)\n",
+    "grid_forest.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "print(grid_forest.best_score_)\n",
+    "print(grid_forest.best_estimator_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result['RandomForestRegressor'] = pd.Series(grid_forest.best_estimator_.predict(X_test))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Визуализация результатов"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from plotly.offline import init_notebook_mode, iplot\n",
+    "import plotly\n",
+    "import plotly.graph_objs as go\n",
+    "\n",
+    "init_notebook_mode(connected=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in result.columns:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Результаты обучения\n",
+    "columns = result.columns\n",
+    "\n",
+    "traces=[]\n",
+    "for i in columns:\n",
+    "    traces.append(go.Scatter(\n",
+    "                    x=result.index,\n",
+    "                    y=result[i],\n",
+    "                    name=i,\n",
+    "                    orientation = 'v')\n",
+    "                 )\n",
+    "\n",
+    "layout = {'title': 'Models result'}\n",
+    "fig = go.Figure(data=traces, layout=layout)\n",
+    "\n",
+    "iplot(fig, show_link=False)"
    ]
   },
   {
