--- a/8. BOSTON - cross validation/boston_house_prices.ipynb
+++ b/8. BOSTON - cross validation/boston_house_prices.ipynb
@@ -599,29 +599,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "target\n",
-      "LinearRegression\n",
-      "HuberRegressor\n",
-      "KNeighborsRegressor\n",
-      "DecisionTreeRegressor\n",
-      "RandomForestRegressor\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i in result.columns:\n",
-    "    print(i)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 29,
    "metadata": {},
    "outputs": [
@@ -1946,6 +1923,13 @@
     "fig = go.Figure(data=traces, layout=layout)\n",
     "\n",
     "iplot(fig, show_link=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"newplot.png\"/>"
    ]
   },
   {
